to check
to check for work